--- a/src/locale/Tr.json
+++ b/src/locale/Tr.json
@@ -2,6 +2,6 @@
   "home":"Anasayfa",
   "aboutUs":"Hakkımızda",
   "ourBrands":"Markalarımız",
-  "joinUs":"Bze Katılın",
+  "joinUs":"Bize Katılın",
   "contact":"İletşm"
 }
