A lot of things changed
Updated footer
Updated data
Fixed typos

--- a/src/locale/En.json
+++ b/src/locale/En.json
@@ -1,7 +1,7 @@
 {
- "home":"Home",
- "aboutUs":"About Us",
- "ourBrands":"Our Brands",
- "joinUs":"Join Us",
- "contact":"Contact"
+  "home": "Home",
+  "aboutUs": "About us",
+  "ourBrands": "Our brands",
+  "joinUs": "Join us",
+  "contact": "Contact"
 }
