--- a/src/locale/Tr.json
+++ b/src/locale/Tr.json
@@ -1,7 +1,7 @@
 {
-  "home":"Anasayfa",
-  "aboutUs":"Hakkımızda",
-  "ourBrands":"Markalarımız",
-  "joinUs":"Bize Katılın",
-  "contact":"İletşm"
+  "home": "Anasayfa",
+  "aboutUs": "Hakkımızda",
+  "ourBrands": "Markalarımız",
+  "joinUs": "Bize Katılın",
+  "contact": "İletişim"
 }
