--- a/src/locale/En.json
+++ b/src/locale/En.json
@@ -3,5 +3,16 @@
   "aboutUs": "About us",
   "ourBrands": "Our brands",
   "joinUs": "Join us",
-  "contact": "Contact"
+  "discoverRestaurant": "Discover our beautiful restaurant",
+  "ourServices": "Our services",
+  "whyUs": "Why you should choose us",
+  "gallery": "Our gallery",
+  "cook": "Cook",
+  "brand": "Brand",
+  "recipe": "Recipe",
+  "staff": "Staff",
+  "contact": "Contact",
+  "invest": "Invest",
+  "about": "Soon Kitchen is a hybrid cloud kitchen concept restaurant startup. It is a technological food business that updates its experience in the sector to produce innovative approaches and solutions with its 12 brands. While designing efficient kitchens, it aims to increase the satisfaction of its customers who come or order packages. In this context, we can get to know our system better with questions and answers that will better define the Soon Kitchen concept and reveal the vision of the future.",
+  "footerAbout": "Soon Kitchen is a hybrid cloud kitchen concept restaurant startup. It is a technological food business that updates its experience in the sector to produce innovative approaches and solutions with its 12 brands. While designing efficient kitchens, it aims to increase the satisfaction of its customers who come or order packages. In this context, we can get to know our system better with questions and answers that will better define the Soon Kitchen concept and reveal the vision of the future."
 }
