--- a/src/locale/Tr.json
+++ b/src/locale/Tr.json
@@ -3,5 +3,16 @@
   "aboutUs": "Hakkımızda",
   "ourBrands": "Markalarımız",
   "joinUs": "Bize Katılın",
-  "contact": "İletişim"
+  "discoverRestaurant": "Güzel restoranımızı keşfedin",
+  "ourServices": "SERVİSLERİMİZ",
+  "whyUs": "Neden bizi tercih etmelisiniz?",
+  "gallery": "Galerimiz",
+  "cook": "Aşçı",
+  "brand": "Marka",
+  "recipe": "Ürün",
+  "staff": "Çalışan",
+  "invest": "Yatırım",
+  "contact": "İLETİŞİM",
+  "about": "Soon Kitchen hibrit cloud kitchen konseptli bir restoran start-upıdır. Bünyesinde bulunan 13 markası ile sektördeki tecrübesini yenilikçi yaklaşımlar ve çözümler üretmek üzere güncelleyen teknolojik bir gıda işletmesidir. Verimli mutfaklar tasarlarken, gelen ya da paket sipariş eden müşterilerinin memnuniyetlerini arttırmayı amaçlamaktadır. Bu kapsamda Soon Kitchen konseptini daha iyi tanımlayacak ve gelecek vizyonunu ortaya koyacak sorular ve cevaplar eşliğinde sistemimizi daha yakından tanıyabiliriz.",
+  "footerAbout": "Soon Kitchen hibrit cloud kitchen konseptli bir restoran start-upıdır. Bünyesinde bulunan 13 markası ile sektördeki tecrübesini yenilikçi yaklaşımlar ve çözümler üretmek üzere güncelleyen teknolojik bir gıda işletmesidir. Verimli mutfaklar tasarlarken, gelen ya da paket sipariş eden müşterilerinin memnuniyetlerini arttırmayı amaçlamaktadır."
 }
